--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 4.5.0
 Homepage: http://example.com
 
 Package: dummy
+Version: 4.5-1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, build-essential, cmake
 Description: Простой пример приложения на C++
