--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: dummy
 Section: utils
 Priority: optional
 Maintainer: Ваше Имя <ваш.email@example.com>
-Build-Depends: debhelper (= 13), cmake, g++ 
+Build-Depends: debhelper (= 13), cmake, build-essential
 Standards-Version: 4.5.0
 Homepage: http://example.com
 
 Package: dummy
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, build-essential, cmake
 Description: Простой пример приложения на C++
- Это простое приложение на C++, которое демонстрирует использование CMake для сборки.
+ пакет зависит от build-essential и cmake
 
